--- a/apod.html
+++ b/apod.html
@@ -7,32 +7,38 @@
     <link rel="stylesheet" href="style.css">
     <title>APOD</title>
 </head>
-<body>
+<body id="apodPagina">
     <header class="cabecalho">
-        <img id="imagemCabecalho" src="nasalogo.jpg" alt="logo"">
+        <img id="imagemCabecalho" src="nasalogo.png" alt="logo"">
         <ul id="listaCabecalho">
-            <li>HOME</li>
-            <li>CONTACT US</li>
-            <li>ABOUT US</li>
+            <li id="home">HOME</li>
+            <li id="linkedin">LinkedIn</li>
+            <li id="github">GITHUB</li>
         </ul>
     </header>
-    <main>
+    <main id="corpo">
         <section class="titulo">
-           <h1>Astronomy Picture of the Day</h1> 
+           <h1>ASTRONOMY PICTURE OF THE DAY</h1> 
         </section>
         <section class="data">
             <input type="date" class="dataDesejada">
             <button class="btn">_Discover the cosmos!</button> 
         </section>
-        <section class="blocoDeImagem">
+        <div id="apodDivisoria">
+            <section class="blocoDeImagem">
             <p id="img">imagem</p>
-        </section>
-        <section class="blocoDeExplicacao">
-            <p> EXPLANATION: </p>
-            <p id="explicacao"> explanation here</p>
-        </section>
+            </section>
+            
+            <section class="blocoDeExplicacao">   
+                <p id="paragrafoExplicacao"> EXPLANATION: </p>
+                <p id="explicacao"> explanation here</p>
+            </section>
+        </div>
+        <!--<section>
+            <img src="estrelas.png" alt="image" height="200px">
+        </section>-->
     </main>
-    <footer class="rodape">
+    <footer class="apodRodape">
         <p>DEVELOPED BY JESSICA BISPO</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
