--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img id="imagemCabecalho" src="nasalogo.jpg" alt="logo"">
+        <img id="imagemCabecalho" src="nasalogo.png" alt="logo"">
         <ul id="listaCabecalho">
-            <li>HOME</li>
-            <li>CONTACT US</li>
-            <li>ABOUT US</li>
+            <li id="home">HOME</li>
+            <li id="linkedin">LinkedIn</li>
+            <li id="github">GITHUB</li>
         </ul>
     </header>
     <main class="corpoPrincipal">
@@ -28,11 +28,15 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget sapien malesuada, eleifend metus in, suscipit risus. Ut vitae odio metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse fringilla leo nec suscipit auctor. Quisque convallis fringilla feugiat. Suspendisse tincidunt neque eget vestibulum mattis.</p>
             </section>
             <section id="botaoPrincipal">
-                <button >_EXPLORE HERE</button>
+                 <button id="btnPrincipal">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M5 13c0-5.088 2.903-9.436 7-11.182C16.097 3.564 19 7.912 19 13c0 .823-.076 1.626-.22 2.403l1.94 1.832a.5.5 0 0 1 .095.603l-2.495 4.575a.5.5 0 0 1-.793.114l-2.234-2.234a1 1 0 0 0-.707-.293H9.414a1 1 0 0 0-.707.293l-2.234 2.234a.5.5 0 0 1-.793-.114l-2.495-4.575a.5.5 0 0 1 .095-.603l1.94-1.832C5.077 14.626 5 13.823 5 13zm1.476 6.696l.817-.817A3 3 0 0 1 9.414 18h5.172a3 3 0 0 1 2.121.879l.817.817.982-1.8-1.1-1.04a2 2 0 0 1-.593-1.82c.124-.664.187-1.345.187-2.036 0-3.87-1.995-7.3-5-8.96C8.995 5.7 7 9.13 7 13c0 .691.063 1.372.187 2.037a2 2 0 0 1-.593 1.82l-1.1 1.039.982 1.8zM12 13a2 2 0 1 1 0-4 2 2 0 0 1 0 4z" fill="currentColor"></path></svg>
+                    <span>_EXPLORE HERE</span>
+                </button>
+                   
             </section>
         </div>
     </main>
-    <footer id="rodape">
+    <footer class="rodape">
         <p>DEVELOPED BY JESSICA BISPO</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
