finalizando css, adicionando responsividade

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>EXPLORE SPACE</h1>
             </section>
             <section id="textoPrincipal">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget sapien malesuada, eleifend metus in, suscipit risus. Ut vitae odio metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse fringilla leo nec suscipit auctor. Quisque convallis fringilla feugiat. Suspendisse tincidunt neque eget vestibulum mattis.</p>
+                <p>Each day a different image or photograph of our fascinating universe is featured, along with a brief explanation written by a professional astronomer.</p>
             </section>
             <section id="botaoPrincipal">
                  <button id="btnPrincipal">
