adicionando detalhes ao css e responsividade

--- a/apod.html
+++ b/apod.html
@@ -26,12 +26,12 @@
         </section>
         <div id="apodDivisoria">
             <section class="blocoDeImagem">
-            <p id="img">imagem</p>
+            <p id="img"></p>
             </section>
             
             <section class="blocoDeExplicacao">   
                 <p id="paragrafoExplicacao"> EXPLANATION: </p>
-                <p id="explicacao"> explanation here</p>
+                <p id="explicacao"></p>
             </section>
         </div>
     
